# hunspell-rs

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
tests/fixtures/: extra.dic  reduced.aff  reduced.dic
