[package]
name = "hunspell-rs"
version = "0.1.4"
authors = ["Lipka Boldizsár <lipkab@zoho.com>", "Bernhard Schuster <bernhard@ahoi.io>"]
description = "Rust bindings to the Hunspell library"
keywords = ["spellcheck", "hunspell"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/drahnr/hunspell-rs"
edition = "2018"

[dependencies]
hunspell-sys = "0.1.3"
